--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "website",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "compile:sass": "node-sass sass/main.scss src/css/style.css -w"
   },
   "author": "basia",
   "license": "ISC",
